# tauri-vs-electron-benchmark

./: .gitignore  README.md  package.json
bench/: index.ts
benchmark-tui/: package.json
benchmark-tui/src/: index.tsx
convex/: tasks.ts
electron-app/: package.json
electron-app/src/: index.html  main.js  preload.js
electron-bench-app/: index.html  package-lock.json  package.json  sampleData.jsonl  tsconfig.json
electron-bench-app/app/: page.tsx
electron-bench-app/convex/: tasks.ts
electron-bench-app/electron/: main.js  main.ts  tsconfig.json
electron-bench-app/electron-app-benchmark/: package.json
electron-bench-app/src/: App.tsx  ConvexClientProvider.tsx  globals.css  index.html
results/: bench-windows-x64.json  bench-windows-x64.md  benchmark-history.json
scripts/: compare-pms.sh  gen-icons.ts  measure-build-cold.sh  measure-build-hot.sh  measure-cpu-idle.sh  measure-cpu-load.sh  measure-install.sh  measure-latency.sh  measure-memory.sh  measure-size.sh  measure-startup.sh  run-all.sh
tauri-app/: package.json
tauri-app/src/: index.html
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
tauri-bench-app/: package-lock.json  package.json  sampleData.jsonl  tsconfig.json
tauri-bench-app/src/: App.tsx  index.html  main.tsx
tauri-bench-app/src-tauri/: tauri.conf.json
tauri-bench-app/tauri-app-benchmark/: package.json
